--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,7 @@
   --green: #31d0aa;
   --navyblue-modal: rgba(46, 47, 66, 0.4);
   --dairy: #fcfcfc;
+  --anim: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* Others */
 /* html {
@@ -759,6 +760,7 @@ img {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
     0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
+  padding: 72px 24px 24px 24px;
 }
 .modal-btn-close {
   position: absolute;
@@ -792,4 +794,176 @@ img {
 .modal-btn-close:focus {
   background-color: var(--dark-blue-color);
   border: none;
+}
+
+.modal-caption {
+  display: block;
+  color: var(--navyblue, #2e2f42);
+  text-align: center;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.32px;
+  margin-bottom: 16px;
+}
+.modal-form {
+  /* display: block; */
+}
+.modal-form-field {
+  display: block;
+  position: relative;
+  margin-bottom: 8px;
+}
+.modal-form-label {
+  display: block;
+  margin-bottom: 4px;
+
+  color: var(--lightslate, #8e8f99);
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.48px;
+}
+.modal-form-input {
+  /* display: block; */
+  width: 100%;
+  color: var(--navyblue-modal, rgba(46, 47, 66, 0.4));
+  font-family: Roboto;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.48px;
+  padding-left: 38px;
+
+  height: 40px;
+  border-radius: 4px;
+  /* border: 1px solid var(--iris, #4d5ae5); */
+  border: 1px solid var(--navyblue-modal, #2e2f4266);
+  /* transition: border-color var(--anim); */
+  transition: background-color var(--anim);
+}
+
+.modal-form-input:focus {
+  border-color: var(--logo-color);
+}
+.modal-form-input::placeholder {
+  opacity: 0;
+  transition: opacity 250ms ease 300ms;
+}
+.modal-form-input:focus::placeholder {
+  opacity: 1;
+}
+
+.modal-form-icon {
+  position: absolute;
+  left: 16px;
+  bottom: 8px;
+
+  fill: #2e2f42;
+  stroke: none;
+  transition: stroke var(--anim);
+}
+
+.modal-form-input:focus + .modal-form-icon {
+  fill: var(--logo-color);
+}
+
+.modal-form-comment {
+  width: 100%;
+  border-radius: 4px;
+  height: 120px;
+  border: 1px solid var(--navyblue-modal, rgba(46, 47, 66, 0.4));
+  color: var(--navyblue-modal, rgba(46, 47, 66, 0.4));
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.48px;
+
+  outline: transparent;
+  resize: none;
+  transition: border-color var(--anim);
+  padding: 8px 16px;
+}
+
+.modal-form-comment:focus {
+  border-color: var(--logo-color);
+}
+.modal-form-comment::placeholder {
+  color: currentColor;
+}
+
+.modal-form-agreement {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  margin-bottom: 40px;
+}
+.modal-form-checkbox {
+}
+.modal-form-custom-checkbox {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 16px;
+  height: 16px;
+
+  border: 1px solid rgba(17, 17, 17, 0.14);
+  border-radius: 2px;
+
+  transition: border-color var(--anim), background-color var(--anim);
+}
+.modal-form-checkbox:checked + .modal-form-custom-checkbox {
+  border-color: var(--logo-color);
+  /* background-color: var(--logo-color); */
+}
+.modal-form-checkbox-icon {
+  /* fill: #2e2f42; */
+  /* stroke: #2e2f42; */
+  opacity: 0;
+  transform: scale(0.3);
+  transition: opacity 300ms cubic-bezier(0, 0, 1, 1.8) 150ms,
+    transform 300ms cubic-bezier(0, 0, 1, 1.8) 150ms;
+  width: 16px;
+  height: 16px;
+  border-radius: 2px;
+  /* border: 1px solid var(--navyblue-modal, rgba(46, 47, 66, 0.4)); */
+  fill: var(--dark-blue-color);
+  stroke-width: 1px;
+  stroke: var(--dark-blue-color);
+}
+.modal-form-checkbox:checked
+  + .modal-form-custom-checkbox
+  > .modal-form-checkbox-icon {
+  opacity: 1;
+  transform: scale(1);
+}
+.modal-form-agreement-desc {
+  user-select: none;
+  color: #8e8f99;
+  font-family: Roboto;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 14px;
+  letter-spacing: 0.48px;
+}
+.modal-form-link {
+  color: var(--logo-color);
+  text-decoration: underline;
+}
+.accent-btn {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  text-align: center;
+  color: #ffffff;
+  background: #4d5ae5;
+  min-width: 169px;
+  height: 56px;
+  padding: 16px 32px;
+  border-radius: 4px;
+  border: 0;
+  margin: 0 auto;
+  display: block;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
