--- a/css/styles.css
+++ b/css/styles.css
@@ -733,6 +733,7 @@ img {
 .footer-subscribe-title {
   font-weight: 500;
   line-height: 1.5;
+  font-size: 16px;
   letter-spacing: 0.32px;
   color: var(--background-color-white);
   margin-bottom: 16px;
@@ -751,10 +752,14 @@ img {
   background: var(--title-color);
   padding-left: 16px;
 
-  color: var(--background-color-white);
+  /* color: var(--background-color-white); */
   font-size: 12px;
   line-height: 2;
   letter-spacing: 0.48px;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+}
+.subscribe-form-input::placeholder {
+  color: var(--background-color-white);
 }
 
 .footer-subscribe-btn {
