--- a/css/styles.css
+++ b/css/styles.css
@@ -870,7 +870,7 @@ img {
 
 .modal-caption {
   display: block;
-  color: var(--navyblue, #2e2f42);
+  color: var(--title-color);
   text-align: center;
   font-weight: 500;
   font-size: 16px;
@@ -881,14 +881,22 @@ img {
 .modal-form {
   /* display: block; */
 }
-.modal-form-field {
-  display: block;
-  position: relative;
-  margin-bottom: 8px;
-}
 .modal-form-label {
   position: relative;
   margin-bottom: 8px;
+}
+.modal-form-field {
+  display: block;
+  position: relative;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: var(--lightslate);
+  margin-bottom: 4px;
+}
+
+.modal-wrap-input-svg {
+  position: relative;
 }
 
 .modal-form-input {
@@ -900,6 +908,7 @@ img {
   padding-left: 38px;
   outline: none;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  outline: transparent;
 }
 
 .modal-form-input:focus {
@@ -918,15 +927,10 @@ img {
   top: 50%;
   left: 16px;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  /* transform: translateY(-50%); */
-  /* position: absolute; */
-  /* left: 16px;
-  bottom: 8px; */
-  /* transform: translateY(-50%);
-
-  fill: #2e2f42;
+  transform: translateY(-50%);
+  fill: var(--title-color);
   stroke: none;
-  transition: stroke var(--anim); */
+  /* transition: stroke var(--anim); */
 }
 
 .modal-form-input:focus + .modal-form-icon {
@@ -937,12 +941,12 @@ img {
   width: 100%;
   border-radius: 4px;
   height: 120px;
-  border: 1px solid var(--navyblue-modal, rgba(46, 47, 66, 0.4));
-  color: var(--navyblue-modal, rgba(46, 47, 66, 0.4));
+  border: 1px solid var(--navyblue-modal);
+  color: var(--navyblue-modal);
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.48px;
-
+  background-color: transparent;
   outline: transparent;
   resize: none;
   transition: border-color var(--anim);
@@ -969,21 +973,23 @@ img {
 .modal-form-checkbox {
 }
 .modal-form-custom-checkbox {
-  display: flex;
+  display: inline-flex;
   align-items: center;
   justify-content: center;
+  fill: transparent;
 
   width: 16px;
   height: 16px;
 
-  border: 1px solid rgba(17, 17, 17, 0.14);
+  border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 2px;
 
   transition: border-color var(--anim), background-color var(--anim);
 }
 .modal-form-checkbox:checked + .modal-form-custom-checkbox {
-  border-color: var(--logo-color);
-  /* background-color: var(--logo-color); */
+  border: none;
+  background-color: var(--logo-color);
+  fill: var(--cloud);
 }
 .modal-form-checkbox-icon {
   /* fill: #2e2f42; */
@@ -992,8 +998,8 @@ img {
   transform: scale(0.3);
   transition: opacity 300ms cubic-bezier(0, 0, 1, 1.8) 150ms,
     transform 300ms cubic-bezier(0, 0, 1, 1.8) 150ms;
-  width: 16px;
-  height: 16px;
+  /* width: 10;
+  height: 8px; */
   border-radius: 2px;
   /* border: 1px solid var(--navyblue-modal, rgba(46, 47, 66, 0.4)); */
   fill: var(--dark-blue-color);
@@ -1008,13 +1014,13 @@ img {
 }
 .modal-form-agreement-desc {
   user-select: none;
-  color: #8e8f99;
+  color: var(--lightslate);
   font-family: Roboto;
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
-  line-height: 14px;
-  letter-spacing: 0.48px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
 }
 .modal-form-link {
   color: var(--logo-color);
