--- a/css/styles.css
+++ b/css/styles.css
@@ -747,12 +747,13 @@ img {
   border-radius: 4px;
   border: 1px solid var(--white, #fff);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-  background: var(--title-color);
+  background-color: transparent;
+  /* background: var(--title-color); */
   padding-left: 16px;
 
-  /* color: var(--background-color-white); */
+  color: var(--background-color-white);
   font-size: 12px;
-  line-height: 2;
+  line-height: 1.5;
   letter-spacing: 0.48px;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
 }
@@ -773,7 +774,7 @@ img {
   /* width: 117px; */
   /* height: 24px; */
   display: inline-flex;
-  gap: 16px;
+  /* gap: 16px; */
   min-width: 165px;
   height: 40px;
   /* display: flex; */
@@ -798,6 +799,7 @@ img {
 
 .footer-btn-icon {
   fill: var(--background-color-white);
+  margin-left: 16px;
 }
 
 /* Modal window */
@@ -969,9 +971,9 @@ img {
 }
 
 .modal-form-agreement {
-  display: flex;
+  /* display: flex;
   align-items: center;
-  gap: 12px;
+  gap: 12px; */
   margin-bottom: 24px;
 }
 .modal-form-checkbox {
@@ -981,6 +983,7 @@ img {
   align-items: center;
   justify-content: center;
   fill: transparent;
+  margin-right: 8px;
 
   width: 16px;
   height: 16px;
@@ -988,9 +991,13 @@ img {
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 2px;
 
-  transition: border-color var(--anim), background-color var(--anim);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-form-checkbox:checked + .modal-form-custom-checkbox {
+.modal-form-checkbox:checked
+  + .modal-form-agreement-desc
+  .modal-form-custom-checkbox {
   border: none;
   background-color: var(--logo-color);
   fill: var(--cloud);
