--- a/css/styles.css
+++ b/css/styles.css
@@ -999,7 +999,7 @@ img {
   + .modal-form-agreement-desc
   .modal-form-custom-checkbox {
   border: none;
-  background-color: var(--logo-color);
+  background-color: var(--dark-blue-color);
   fill: var(--cloud);
 }
 .modal-form-checkbox-icon {
